# DataReport

./: .gitignore  CMakeLists.txt  README.md  icon.rc  main.cpp  morose.qrc  packages.config
.github/workflows/: NewVersionRelease.yml  WeeklyBuild.yml
cmake/: FindMorose.cmake
common/: common.cpp  common.h  qframelesswindow.cpp  qframelesswindow.h  ruitie.cpp  ruitie.h  ruitiedefine.h
common/msg/: dailyrecordmsg.cpp  dailyrecordmsg.h  discoveryrecordmsg.cpp  discoveryrecordmsg.h  inspectionrecordmsg.cpp  inspectionrecordmsg.h  quarterlyrecordmsg.cpp  quarterlyrecordmsg.h
common/views/: datatablemodel.cpp  datatablemodel.h  defectrecordview.cpp  defectrecordview.h  inspectionrecordview.cpp  inspectionrecordview.h  performancerecordview.cpp  performancerecordview.h  qwaveview.cpp  qwaveview.h
config/: DeployConfig.json  ProductConfigTemplate.json
resource/qml/: main.qml
resource/qml/components/: dailyRecord.qml  discoveryRecord.qml  fileSelect.qml  folderComboBox.qml  inspectionRecord.qml  qmldir  quarterlyRecord.qml
script/: pack-installer.iss.in
template/: 货车车轮尺寸图.docx  车轮超声波自动探伤机日常性能检查记录表.xlsx
templates/: 车轮超声波探伤发现缺陷记录表.xlsx  车轮超声波探伤记录表.xlsx  车轮超声波自动探伤机季度性能检查表.xlsx
templates/log/: setting.ini
